syntax = "proto3";

package autd3;

import "utils.proto";
import "utils-lightweight.proto";

message BesselOption {
  optional EmitIntensity intensity = 1;
  optional Phase phase_offset = 2;
}

message Bessel {
  Point3 pos = 1;
  UnitVector3 dir = 2;
  Angle theta = 3;
  BesselOption option = 4;
}

message FocusOption {
  optional EmitIntensity intensity = 1;
  optional Phase phase_offset = 2;
}

message Focus {
  Point3 pos = 1;
  FocusOption option = 2;
}

message Null {}

message PlaneOption {
  optional EmitIntensity intensity = 1;
  optional Phase phase_offset = 2;
}

message Plane {
  UnitVector3 dir = 1;
  PlaneOption option = 2;
}

message Uniform {
  EmitIntensity intensity = 1;
  Phase phase = 2;
}

message Amplitude { float value = 1; }

message Holo {
  Point3 pos = 1;
  Amplitude amp = 2;
}

message EmissionConstraint {
  message Normalize {}
  message Multiply { float value = 1; }
  message Uniform { EmitIntensity value = 1; }
  message Clamp {
    EmitIntensity min = 1;
    EmitIntensity max = 2;
  }
  oneof variant {
    Normalize normalize = 1;
    Uniform uniform = 2;
    Clamp clamp = 3;
    Multiply multiply = 4;
  }
}

message NaiveOption { optional EmissionConstraint constraint = 1; }

message Naive {
  repeated Holo holo = 1;
  NaiveOption option = 2;
}

message GSOption {
  optional EmissionConstraint constraint = 1;
  optional uint64 repeat = 2;
}

message GS {
  repeated Holo holo = 1;
  GSOption option = 2;
}

message GSPATOption {
  optional EmissionConstraint constraint = 1;
  optional uint64 repeat = 2;
}

message GSPAT {
  repeated Holo holo = 1;
  GSPATOption option = 2;
}

message LMOption {
  optional EmissionConstraint constraint = 1;
  optional float eps_1 = 2;
  optional float eps_2 = 3;
  optional float tau = 4;
  optional uint64 k_max = 5;
  repeated float initial = 6;
}

message LM {
  repeated Holo holo = 1;
  LMOption option = 2;
}

message GreedyOption {
  optional EmissionConstraint constraint = 1;
  optional uint32 phase_div = 2;
}

message Greedy {
  repeated Holo holo = 1;
  GreedyOption option = 2;
}

message Gain {
  oneof gain {
    Bessel bessel = 1;
    Focus focus = 2;
    Null null = 3;
    Plane plane = 4;
    Uniform uniform = 5;
    Naive naive = 101;
    GS gs = 102;
    GSPAT gspat = 103;
    LM lm = 104;
    Greedy greedy = 105;
  }
}
